# vinayman

./: Cargo.toml  index.html  input.css  output-568d33c3f7774ed0.css  package-lock.json  package.json  tailwind.config.js  vinayman_portfolio-12b3ffab5f404c96.js  vinayman_portfolio-12b3ffab5f404c96_bg.wasm  vinayman_portfolio-bdd2e676f6d2f4d4.js  vinayman_portfolio-bdd2e676f6d2f4d4_bg.wasm
.github/workflows/: cd-gh-pages-deployment.yaml
public/blog/: hello-world-post.md
src/: lib.rs  main.rs
src/pages/: blog.rs  blog_post.rs  home.rs  mod.rs  projects.rs
style/: output.css
